# pico-cdc-hid-template

./: CMakeLists.txt  README.md  makefile
src/: CMakeLists.txt  led_drv.h  main.c  platform.c  platform.h  usb_descriptors.c
